Added password hashing MD5